Added Rserve library, used by RPlugin.

--- a/TimeNetExperimentGenerator/src/timenetexperimentgenerator/MainFrame.form
+++ b/TimeNetExperimentGenerator/src/timenetexperimentgenerator/MainFrame.form
@@ -118,6 +118,8 @@
                           <Group type="102" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jButtonPathToR" min="-2" pref="192" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="jButtonPlotR" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="32767" attributes="0"/>
                           </Group>
                       </Group>
@@ -139,10 +141,6 @@
                           <Component id="jButtonStartBatchSimulation" alignment="0" max="32767" attributes="1"/>
                           <Component id="jSeparator3" alignment="0" max="32767" attributes="1"/>
                           <Component id="jButtonLoadCacheFile" alignment="1" max="32767" attributes="0"/>
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-                              <Component id="jButtonStartOptimization" max="32767" attributes="1"/>
-                          </Group>
                           <Group type="102" alignment="1" attributes="0">
                               <Component id="jComboBoxSimulationType" max="32767" attributes="0"/>
                               <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
@@ -152,7 +150,10 @@
                               </Group>
                               <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="jLabelExportStatus" alignment="1" min="-2" pref="265" max="-2" attributes="0"/>
+                          <Group type="103" alignment="1" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="jButtonStartOptimization" alignment="1" max="32767" attributes="1"/>
+                              <Component id="jLabelExportStatus" alignment="1" pref="265" max="32767" attributes="0"/>
+                          </Group>
                       </Group>
                   </Group>
               </Group>
@@ -201,7 +202,6 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jButton2" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
@@ -216,7 +216,10 @@
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabelExportStatus" alignment="0" min="-2" pref="29" max="-2" attributes="0"/>
-                  <Component id="jButtonPathToR" alignment="0" min="-2" pref="20" max="-2" attributes="0"/>
+                  <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                      <Component id="jButtonPathToR" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
+                      <Component id="jButtonPlotR" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
               <Component id="jButtonEnterURLToSimServer" min="-2" pref="20" max="-2" attributes="0"/>
@@ -471,6 +474,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonPathToRActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="jButtonPlotR">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="R Plot"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonPlotRActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
