--- a/TimeNetExperimentGenerator/src/timenetexperimentgenerator/optimization/OptimizerPreferences.form
+++ b/TimeNetExperimentGenerator/src/timenetexperimentgenerator/optimization/OptimizerPreferences.form
@@ -54,7 +54,7 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jLabel4" min="-2" pref="239" max="-2" attributes="0"/>
-                          <Component id="jLabelStartvalueForParameters" alignment="0" pref="340" max="32767" attributes="0"/>
+                          <Component id="jLabelStartvalueForParameters" alignment="0" pref="410" max="32767" attributes="0"/>
                           <Component id="jLabelTypeOfNeighborhood" alignment="0" min="-2" pref="276" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="292" max="-2" attributes="0"/>
@@ -151,7 +151,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabelWrongSolutionsPerDirectionUntilBreak">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Wrong Solutions per direction until break"/>
+        <Property name="text" type="java.lang.String" value="Wrong Solutions per direction/parameter until break"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextFieldLogFileAddon">
