--- a/TimeNetExperimentGenerator/src/timenetexperimentgenerator/MainFrame.form
+++ b/TimeNetExperimentGenerator/src/timenetexperimentgenerator/MainFrame.form
@@ -75,7 +75,6 @@
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -96,7 +95,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
-                      <Component id="jSeparator1" pref="666" max="32767" attributes="0"/>
+                      <Component id="jSeparator1" pref="671" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -110,39 +109,38 @@
                                           <Component id="jButtonPathToTimeNet" alignment="0" min="-2" pref="192" max="-2" attributes="0"/>
                                           <Component id="jCheckBoxSlaveSimulator" alignment="0" min="-2" pref="198" max="-2" attributes="0"/>
                                       </Group>
-                                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                      <EmptySpace min="0" pref="20" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jButtonPathToR" min="-2" pref="192" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jButtonPlotR" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="32767" attributes="0"/>
                           </Group>
                       </Group>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabelSimulationCount" max="32767" attributes="0"/>
+                          <Component id="jLabelSimulationCount" pref="265" max="32767" attributes="0"/>
                           <Component id="jTabbedPane1" alignment="0" pref="0" max="32767" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
-                              <Component id="jButtonOpenSCPN" max="32767" attributes="1"/>
+                              <Component id="jButtonOpenSCPN" pref="144" max="32767" attributes="1"/>
                               <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
-                              <Component id="jButtonReload" max="32767" attributes="1"/>
+                              <Component id="jButtonReload" pref="116" max="32767" attributes="1"/>
                           </Group>
-                          <Component id="jSeparator2" alignment="0" max="32767" attributes="1"/>
+                          <Component id="jSeparator2" alignment="0" pref="265" max="32767" attributes="1"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="jButtonExport" pref="0" max="32767" attributes="0"/>
                               <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
-                              <Component id="jButton1" max="32767" attributes="0"/>
+                              <Component id="jButton1" pref="238" max="32767" attributes="0"/>
                           </Group>
-                          <Component id="jButtonGenerateListOfExperiments" alignment="0" max="32767" attributes="1"/>
-                          <Component id="jButtonStartBatchSimulation" alignment="0" max="32767" attributes="1"/>
-                          <Component id="jSeparator3" alignment="0" max="32767" attributes="1"/>
-                          <Component id="jButtonLoadCacheFile" alignment="1" max="32767" attributes="0"/>
+                          <Component id="jButtonGenerateListOfExperiments" alignment="0" pref="265" max="32767" attributes="1"/>
+                          <Component id="jButtonStartBatchSimulation" alignment="0" pref="265" max="32767" attributes="1"/>
+                          <Component id="jSeparator3" alignment="0" pref="265" max="32767" attributes="1"/>
+                          <Component id="jButtonLoadCacheFile" alignment="1" pref="265" max="32767" attributes="0"/>
                           <Group type="102" alignment="1" attributes="0">
-                              <Component id="jComboBoxSimulationType" max="32767" attributes="0"/>
+                              <Component id="jComboBoxSimulationType" pref="134" max="32767" attributes="0"/>
                               <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="jButton2" max="32767" attributes="1"/>
@@ -162,7 +160,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jButtonEnterURLToSimServer" min="-2" pref="192" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="492" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -264,7 +262,6 @@
       <SubComponents>
         <Component class="javax.swing.JTable" name="jTableParameterList">
           <Properties>
-            <Property name="autoCreateRowSorter" type="boolean" value="true"/>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="4">
                 <Column editable="true" title="Name" type="java.lang.String"/>
@@ -273,6 +270,7 @@
                 <Column editable="true" title="Stepping" type="java.lang.String"/>
               </Table>
             </Property>
+            <Property name="autoCreateRowSorter" type="boolean" value="true"/>
             <Property name="autoResizeMode" type="int" value="4"/>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
@@ -431,12 +429,8 @@
     </Component>
     <Component class="javax.swing.JComboBox" name="jComboBoxOptimizationType">
       <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="3">
-            <StringItem index="0" value="Greedy"/>
-            <StringItem index="1" value="Sim. Annealing"/>
-            <StringItem index="2" value=" "/>
-          </StringArray>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="new DefaultComboBoxModel(typeOfOptimization.values())" type="code"/>
         </Property>
       </Properties>
       <Events>
